
<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:android="http://schemas.android.com/apk/res/android"
   android:background="@drawable/backgroundrepeat"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/un"
        android:hint="@string/username"
        android:fontFamily="sans-serif"
        android:inputType="textPersonName"
        android:textColor="@color/textColorBlack"
        android:textColorHint="@color/hintTextColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="48dp"
        app:layout_constraintHorizontal_bias="0.0"
        tools:targetApi="jelly_bean" />
    <EditText
        android:id="@+id/pwd"
        android:hint="@string/password"
        android:fontFamily="sans-serif"
        android:textColor="@color/textColorBlack"
        android:inputType="textPassword"
        android:textColorHint="@color/hintTextColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/un" />

    <Button
        android:id="@+id/login1"
        android:layout_width="0dp"
        android:fontFamily="sans-serif"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/buttonColor"
        android:text="@string/login"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwd"

        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintHorizontal_bias="0.0" />





</android.support.constraint.ConstraintLayout>
