<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundrepeat"
    tools:context=".StudentDetails">

    <TextView
        android:id="@+id/Tv_gen_bill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:paddingLeft="5dp"
        android:text="UPDATE CLUB DETAILS"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/textColorInTextView"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tv_gen_bill"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <EditText
                        android:id="@+id/editText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_club_name"
                        android:inputType="textPersonName"
                        android:textColor="@color/blackTextColor"
                        android:textColorHint="@color/hintTextColor"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginLeft="8dp"
                        app:layout_constraintLeft_toLeftOf="parent" />

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_club_manager"
                        android:inputType="textPostalAddress"
                        android:textColor="@color/textColorBlack"
                        android:textColorHint="@color/hintTextColor"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/editText"
                        android:layout_marginLeft="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginRight="8dp"
                        app:layout_constraintRight_toRightOf="parent" />

                    <EditText
                        android:id="@+id/editText3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_contactManger"
                        android:inputType="phone"
                        android:textColor="@color/textColorBlack"
                        android:textColorHint="@color/hintTextColor"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/editText2"
                        android:layout_marginLeft="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginRight="8dp"
                        app:layout_constraintRight_toRightOf="parent" />




                </android.support.constraint.ConstraintLayout>

            </LinearLayout>




            <LinearLayout
                android:id="@+id/genlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="126dp"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/acc"
                    android:layout_marginStart="8dp"
                    android:maxWidth="100dp"
                    android:maxHeight="100dp"
                    android:scaleType="fitXY"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/etcmContact"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintRight_toRightOf="parent"
                    />






            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">





                    <Button
                        android:id="@+id/btnUpdate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@color/buttonColor"
                        android:text="UPDATE"
                        android:textColor="@color/backgroundLogin"
                        android:textStyle="bold"
                        android:layout_marginLeft="32dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginRight="32dp"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp" />



                </android.support.constraint.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
